# system-programming-11

./: ProjectHome.md  cmake.md  gxlibExample.md
WolframAlphaAPI/: Camculator.h  TouchListener.cpp  TouchListener.h  WolframAlphaAPI.1  WolframAlphaManager.cpp  WolframAlphaManager.h  main.cpp  singleton.h  thread.h
WolframAlphaAPI.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
WolframAlphaAPI/tinyxml/: tinyxml.cpp
camculator/: CMakeCache.txt  CMakeLists.txt  Makefile  camc  camc_integral_test  cmake_install.cmake  keypad.ko
camculator/camculator/: HttpConnector.h  WolframAlphaManager.cpp  WolframAlphaManager.h  camc  camculator.c  camculator.cpp  camculator.h  camculator.map  camera.c  camera.cpp  camera.h  crop.cpp  crop.h  define.h  edit.cpp  edit.h  home.cpp  home.h  ioutil.cpp  ioutil.h  keypad.cpp  keypad.h  labeling.cpp  labeling.h  main.cpp  mp3.h  opencv.cpp  opencv.h  result.cpp  result.h  singleton.h  state.cpp  state.h  thread.h  touch.cpp  touch.h  util.cpp  util.h
camculator/camculator.xcodeproj/: project.pbxproj
camculator/gxlib/: fontinfo.h  gxbmp.h  gxfile.h  gximagelist.h  gxjpg.c  gxpanel.c  gxpng.h  ksc5601.h
camculator/include/gxlib/: gxjpg.h  gxpanel.h  gxpng.h  touch.h
camculator/lib/gxlib/: gxbdf.c
camculator/lib/opencv/: BlobLabeling.h
camculator/lib/opencv/native_sample/: BlobOperators.o.d
camculator_source/camculator/: Makefile  camculator  camculator.c  camculator.map  camera.c  led_bz_sw.c  mp3.c  touch.c  touch.h
camculator_source/include/gxlib/: fontinfo.h  gxbdf.h  gximagelist.h  gxmosaic.h
camculator_source/lib/gxlib/: gx.c  gxbmp.c  gxmosaic.c
camculator_source/lib/opencv/: jni_part.cpp
driver/7seg/: 7segment.c  7segment.ko  Makefile  test.c
driver/sw/: Makefile  sw.c  test  test.c
openCVtest/: cvtest  out  test.cpp
trunk/WolframAlphaAPI/: CMakeLists.txt  Camculator.cpp  Define.h  TouchListener.cpp  TouchListener.h  WolframAlphaManager.cpp  WolframAlphaManager.h  atomic_value.h  lock.h  main.cpp  signal.h  thread.h  util.h
trunk/WolframAlphaAPI.xcodeproj/: project.pbxproj
trunk/camculator/: CMakeCache.txt  CMakeLists.txt  camc
trunk/camculator/camculator/: HttpConnector.cpp  WolframAlphaManager.cpp  WolframAlphaManager.h  camc  camculator  camculator.1  camculator.cpp  camculator.h  camera.c  camera.cpp  crop.h  (+25 more)
trunk/camculator/camculator.xcodeproj/: project.pbxproj
trunk/driver/: testdotmatrix.ko
trunk/openCVtest/: CV-G++  a  out  samplePIC2.xvf  test.cpp
wiki/: DisplayLibrary.wiki  aa.wiki  cmake.wiki  gxlibExample.wiki
(+49 files in other folders)
